# leads

./: .gitignore  Makefile  README.md  docker-compose.yaml  pyproject.toml
deployment/: Dockerfile
src/api/v1/: exceptions.py
src/api/v1/adapters/: __init__.py  address_adapter.py  career_adapter.py  course_adapter.py  enrollment_adapter.py  lead_adapter.py  status_adapter.py  status_change_adapter.py  subject_adapter.py
src/api/v1/dependencies/: __init__.py  domain_services.py  get_admin_service.py  get_lead_service.py
src/api/v1/dtos/: __init__.py  address.py  career.py  course.py  (+5 more)
src/config/: settings.py
src/domain/: exceptions.py
src/domain/interfaces/: __init__.py  paginator.py  repository.py  status.py
src/domain/models/: __init__.py  address.py  career.py  course.py  enrollment.py  lead.py  person.py  status.py  subject.py  value_objects.py
src/domain/services/: __init__.py  admin_service.py  enrollment_service.py  lead_service.py
src/infrastructure/: paginator.py
src/infrastructure/adapters/: __init__.py  address_adapters.py  career_adapters.py  lead_adapters.py
src/infrastructure/persistance/: base.py  exceptions.py
src/infrastructure/repositories/: __init__.py  lead_repository.py
src/test/: conftest.py  test_adapters.py
src/test/fixtures/: client.py  domain.py  dtos.py  repositories.py  services.py
src/test/models/: test_enrollment_model.py
src/test/repositories/: test_enrollment_repository.py
src/test/routers/: test_enrollment_router.py  test_lead_router.py
src/test/services/: test_enrollment_service.py  test_lead_service.py
(+42 files in other folders)
