[tool.poetry]
name = "leads"
version = "0.1.0"
description = "leads service with fastapi"
authors = ["Elias Velardez <eliasvelardez38@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
fastapi = "^0.103.2"
alembic = "^1.12.0"
uvicorn = "^0.23.2"
pydantic-settings = "^2.0.3"
ipdb = "^0.13.13"
pydantic = "^2.4.2"
psycopg2-binary = "^2.9.9"
psycopg2 = "^2.9.9"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
